--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -4,6 +4,8 @@ spring:
   servlet:
     multipart:
       max-file-size: 10MB
+      enabled: true
+      max-request-size: 40MB
   datasource:
     username: root
     password: root
