--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -52,7 +52,7 @@ mybatis-plus:
   # 该配置请和 typeAliasesPackage 一起使用，如果配置了该属性，则仅仅会扫描路径下以该类作为父类的域对象 。
   type-aliases-super-type: java.lang.Object
   # 枚举类配置
-  type-enums-package: cn.hjljy.mlog.model.enums
+  type-enums-package: cn.hjljy.mlog.common.enums
 logging:
   level:
     cn.hjljy.mlog: debug
